--- a/src/components/weather/weather.scss
+++ b/src/components/weather/weather.scss
@@ -1,11 +1,19 @@
 .weather-container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     height: 100vh;
 }
-
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #00000022;
+    width: 100%;
+    height: 100%;
+}
 .location,
 .temperature,
 .weather {
