--- a/src/components/weather/weather.scss
+++ b/src/components/weather/weather.scss
@@ -1,8 +1,5 @@
 .weather-container {
     display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
     height: 100vh;
 }
 .text-container {
@@ -13,6 +10,8 @@
     background: #00000022;
     width: 100%;
     height: 100%;
+    padding: 5px;
+    text-align: center;
 }
 .location,
 .temperature,
