Removed unwanted assets from codebase. Added fonts, added metrics, added directions to wind

--- a/src/common.scss
+++ b/src/common.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+* {
+    font-family: "Montserrat", sans-serif;
+  }
 .common-section {
     display: flex;
     border: 0.5px solid #00000044;
