--- a/src/components/location/location.scss
+++ b/src/components/location/location.scss
@@ -1,5 +1,6 @@
 .location-section {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     .location-subsection {
