--- a/src/common.scss
+++ b/src/common.scss
@@ -26,3 +26,14 @@
         // margin: 0 0.5rem;
     }
 }
+
+body{
+    display: flex;
+    justify-content: center;
+}
+
+.main-container {
+    border: 0.5px solid #00000044;
+    padding: 1rem;
+    max-width: 50rem;
+}
